<resources>
    <string name="app_name">Pollster</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!-- web socket to answering question -->
    <string name="url">http://guarded-oasis-14876.herokuapp.com</string>
    <string name="test">/test</string>
    <string name="getclass">/classes?student_id=</string>
    <string name="getquestion">/questions?class_id=</string>
    <string name="connect">/connect</string>
    <string name="getanswer">/questions</string>
    <string name="postanswer">/answerquestion</string>
    <string name="postlost">/imlost</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Session</item>
        <item>Question</item>
        <item>Settings</item>
    </string-array>
</resources>
